Added win styling functionality
Added change color on win, and turn counter + turn preventer for wrong player.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <input type="Submit" id="X-sel" value="X" onclick="playerChooseX()">
         <input type="Submit" id="O-sel" value="O" onclick="playerChooseO()">
     </div>
+    <h2 id="turn-indic">It is X's turn to go.</h2>
     <div id="reset-button">
         <input type="Submit" id="resetMe" value="Reset Game" onclick="resetButton()">
     </div>
