--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <input type="Submit" id="9" value="" onclick="clickBlock(9); winChecker()">
         </div>
     </div>
-    <div id="select-move">
+    <!-- <div id="select-move">
         <h2>Select your move:</h2>
         <input type="Submit" id="X-sel" value="X" onclick="playerChooseX()">
         <input type="Submit" id="O-sel" value="O" onclick="playerChooseO()">
-    </div>
+    </div> -->
     <h2 id="turn-indic">It is X's turn to go.</h2>
     <div id="reset-button">
         <input type="Submit" id="resetMe" value="Reset Game" onclick="resetButton()">
