Added counter for win/loss/tie

--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
     <div id="reset-button">
         <input type="Submit" id="resetMe" value="Reset Game" onclick="resetButton()">
     </div>
+    <div id="wins-track">
+        <h2>Player X wins: <span id="X-wins">0</span></h2>
+        <h2>Player O wins: <span id="O-wins">0</span></h2>
+        <h2>Ties: <span id="num-ties">0</span></h2>
+
+    </div>
 </body>
 </html>
